deleted phone number

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <h1 class="mb-0">Simon
           <span class="text-primary">Rihm</span>
         </h1>
-        <div class="subheading mb-5">Buntestraße 13 · 76131 Karlsruhe · Germany · (+49) 157-860-231-70 ·
+        <div class="subheading mb-5">Buntestraße 13 · 76131 Karlsruhe · Germany ·
           <a href="mailto:mail@simonrihm.com">mail@simonrihm.com</a>
         </div>
         <p class="lead mb-5"> I am a technology, science and philosophy enthusiast. Always looking for new ideas and meaningful conversations. </p>
