--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#about">About</a>
         </li>
-        <!--<li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
-        </li>
         <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#resume">Resume</a>
+        </li>
+        <!--<li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#education">Education</a>
         </li>
         <li class="nav-item">
@@ -88,6 +88,11 @@
     </section>
 
     <hr class="m-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="resume">
+      <object width="100%" height="1100" type="application/pdf" data="media/2020-04-21_Resume_SimonRihm.pdf"></object>
+    </section>
+
 
     <!--<section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
       <div class="w-100">
