--- a/index.html
+++ b/index.html
@@ -84,13 +84,16 @@
           <a href="https://hackaday.io/simonrihm" id="hexagon">
             <i class="fa fa-hackaday"></i>
           </a>
+          <a href="https://www.youtube.com/channel/UCK6GSTmR4ypOHQg23og3wUA" id="hexagon">
+            <i class="fa fa-youtube"></i>
+          </a>
       </div>
     </section>
 
     <hr class="m-0">
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="resume">
-      <object width="100%" height="1100" type="application/pdf" data="media/2020-04-21_Resume_SimonRihm.pdf"></object>
+      <object width="100%" height="1100" type="application/pdf" data="media/2020-04-25_Resume_SimonRihm.pdf"></object>
     </section>
 
 
